#763: add link to seleniumRobot server in reports